--- a/sharkdata_django/app_sharkdata_base/static/css/bootstrap.css
+++ b/sharkdata_django/app_sharkdata_base/static/css/bootstrap.css
@@ -100,7 +100,7 @@ samp {
 }
 
 pre {
-  white-space: pre-wrap;
+  white-space: pre;
 }
 
 q {
@@ -759,8 +759,8 @@ pre {
   font-size: 13px;
   line-height: 1.428571429;
   color: #333333;
-  word-break: break-all;
-  word-wrap: break-word;
+/*  word-break: break-all; */
+/*  word-wrap: break-word; */
   background-color: #f5f5f5;
   border: 1px solid #cccccc;
   border-radius: 4px;
@@ -770,7 +770,7 @@ pre code {
   padding: 0;
   font-size: inherit;
   color: inherit;
-  white-space: pre-wrap;
+  white-space: pre;
   background-color: transparent;
   border-radius: 0;
 }
