--- a/sharkdata_django/app_sharkdata_base/templates/about.html
+++ b/sharkdata_django/app_sharkdata_base/templates/about.html
@@ -24,8 +24,7 @@
 	</p>
 
 	<p>
-	SHARKdata is currently under development and only a limited number of datasets 
-	are available for test. More information is available here: 
+	More information about the SHARKdata system is available here: 
 	<a href="/documentation">SHARKdata documentation</a>. 
 	</p>
 	
