--- a/sharkdata_django/app_sharkdata_base/templates/sharkdata_base.html
+++ b/sharkdata_django/app_sharkdata_base/templates/sharkdata_base.html
@@ -25,7 +25,8 @@
             </div>
             <nav class="collapse navbar-collapse" id="primary-nav">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Datasets</a></li>
+<!--                    <li class="active"><a href="/">Datasets</a></li> -->
+                    <li><a href="/">Datasets</a></li>
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">All modules<b class="caret"></b></a>
@@ -34,6 +35,8 @@
                             <li><a href="/resources/">Resources</a></li>
                             <li class="divider"></li>
                             <li><a href="/speciesobs/">Species observations</a></li>
+                            <li class="divider"></li>
+		                    <li><a href="/sharkdataadmin/">Data administration</a></li>
                         </ul>
                     </li>
 
@@ -41,6 +44,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="/documentation/">Documentation</a></li>
+                            <li><a href="/examplecode/">Example code</a></li>
                             <li><a href="/datapolicy/">Data policy</a></li>
                             <li class="divider"></li>
                             <li><a href="/about/">About</a></li>
@@ -60,13 +64,27 @@
                     <h1>{% block header %} SHARKdata {% endblock header %}</h1>
                 </div>
 
+				{% block standard-alerts %}
+
+                {% endblock standard-alerts %}
+
                 {% block content %}
                                                          
                 {% endblock content %}
+                
             </div>
                                                    
         </div>
     </div>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-55550806-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 
 </body>
 </html>
