--- a/sharkdata_django/app_sharkdataadmin/templates/speciesobs_cleanup.html
+++ b/sharkdata_django/app_sharkdataadmin/templates/speciesobs_cleanup.html
@@ -1,21 +1,10 @@
-{% extends "sharkdata_base.html" %}
+{% extends "sharkdata_form_base.html" %}
 
 {% block title %}SHARKdata - Clean up species observations{% endblock %}
 
 {% block header %}Species observations{% endblock %}
 
 {% block content %}
-        {% if error_message %}
-        <div class="alert alert-danger">
-            <strong><i>{{ error_message }}</i></strong>
-        </div>
-        {% endif %}
-
-        {% if form.errors %}
-        <div class="alert alert-danger">
-            <strong>Sorry, something went wrong.</strong> Please correct the error(s) below and try to submit the form again.
-        </div>
-        {% endif %}
 
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -23,11 +12,12 @@
             </div>
             <div class="panel-body">
                 <p>Are you sure you want to remove all observations marked as "DELETED"?</p>
-                <form class="sharkdata-form" enctype="multipart/form-data" method="post" action="clean_up">
+                <form class="sharkdata-form" enctype="multipart/form-data" method="post" action="speciesobs_cleanup">
+                	{% csrf_token %}
                     {{ form.as_p }}
                     <p class="sharkdata-form-actions">
                         <button class="btn btn-primary" type="submit">Yes</button>
-                        <a class="btn btn-default" href="/speciesobs">Cancel</a>
+                        <a class="btn btn-default" href="/sharkdataadmin">Cancel</a>
                     </p>
                 </form>
             </div>
