Added all files from release 1.1.1.

--- a/proj_sharkdata/app_sharkdataadmin/templates/sharkdata_admin.html
+++ b/proj_sharkdata/app_sharkdataadmin/templates/sharkdata_admin.html
@@ -22,10 +22,16 @@
             To delete a single dataset select the rightmost column on the <a href="/datasets/">Datasets</a> page.
         </p>
         <p>
-<!--            <a class="btn btn-sm btn-default" href="/sharkdataadmin/datasets_import">Import new dataset</a> -->
-            <a class="btn btn-sm btn-default" href="/sharkdataadmin/datasets_delete_all">Delete all datasets</a>
-            <a class="btn btn-sm btn-default" href="/sharkdataadmin/datasets_load_all">Update from FTP-area</a>
-            <a class="btn btn-sm btn-default" href="/sharkdataadmin/generate_archives">Generate archives</a>
+<!--            <a class="btn btn-sm btn-default" href="/sharkdataadmin/datasets_import">Import new dataset...</a> -->
+            <a class="btn btn-sm btn-default" href="/sharkdataadmin/datasets_delete_all">Delete all datasets...</a>
+            <a class="btn btn-sm btn-default" href="/sharkdataadmin/datasets_load_all">Update from FTP-area...</a>
+        </p>
+        <p>
+            Archive files can be generated on various formats from the datasets. The formats are developed 
+            in cooperation with data consumers to adapt to their harvesting process.   
+        </p>
+        <p>
+            <a class="btn btn-sm btn-default" href="/sharkdataadmin/generate_archives">Generate archive files...</a>
         </p>
         </div>
     </div>
@@ -41,9 +47,9 @@
             To delete a single resource select the rightmost column on the <a href="/resources/">Resources</a> page.
         </p>
         <p>
-<!--            <a class="btn btn-sm btn-default" href="/sharkdataadmin/resources_import">Import new resource</a> -->
-            <a class="btn btn-sm btn-default" href="/sharkdataadmin/resources_delete_all">Delete all resources</a>
-            <a class="btn btn-sm btn-default" href="/sharkdataadmin/resources_load_all">Update from FTP-area</a>
+<!--            <a class="btn btn-sm btn-default" href="/sharkdataadmin/resources_import">Import new resource...</a> -->
+            <a class="btn btn-sm btn-default" href="/sharkdataadmin/resources_delete_all">Delete all resources...</a>
+            <a class="btn btn-sm btn-default" href="/sharkdataadmin/resources_load_all">Update from FTP-area...</a>
         </p>
         </div>
     </div>
@@ -58,9 +64,10 @@
             Use the commands below to synchronise species observations with the loaded datasets.
         </p>
         <p>
-            <a class="btn btn-sm btn-default" href="/sharkdataadmin/speciesobs_update">Update from datasets</a>
-            <a class="btn btn-sm btn-default" href="/sharkdataadmin/speciesobs_load">Reload from backup file</a>
-            <a class="btn btn-sm btn-default" href="/sharkdataadmin/speciesobs_cleanup">Clean up DB</a>
+            <a class="btn btn-sm btn-default" href="/sharkdataadmin/speciesobs_cleanup">Delete all observations...</a>
+            <a class="btn btn-sm btn-default" href="/sharkdataadmin/speciesobs_update">Update from datasets...</a>
+<!--            <a class="btn btn-sm btn-default" href="/sharkdataadmin/speciesobs_load">Reload from backup file...</a> -->
+<!--            <a class="btn btn-sm btn-default" href="/sharkdataadmin/speciesobs_cleanup">Clean up DB...</a> -->
         </p>
         </div>
     </div>
