--- a/proj_sharkdata/app_sharkdataadmin/templates/speciesobs_cleanup.html
+++ b/proj_sharkdata/app_sharkdataadmin/templates/speciesobs_cleanup.html
@@ -11,7 +11,8 @@
                 <h2 class="panel-title">Clean up species observations</h2>
             </div>
             <div class="panel-body">
-                <p>Are you sure you want to remove all observations marked as "DELETED"?</p>
+<!--                <p>Are you sure you want to remove all observations marked as "DELETED"?</p> -->
+                <p>Are you sure you want to delete all species observation?</p>
                 <form class="sharkdata-form" enctype="multipart/form-data" method="post" action="speciesobs_cleanup">
                 	{% csrf_token %}
                     {{ form.as_p }}
