--- a/proj_sharkdata/app_sharkdataadmin/templates/speciesobs_update.html
+++ b/proj_sharkdata/app_sharkdataadmin/templates/speciesobs_update.html
@@ -12,7 +12,7 @@
             </div>
             <div class="panel-body">
                 <p>Are you sure you want to extract species observations from species related information in the datasets?
-                The result will be stored both in the database and in a backup file.
+<!--                The result will be stored both in the database and in a backup file. -->
                 </p>
                 <form class="sharkdata-form" enctype="multipart/form-data" method="post" action="speciesobs_update">
                 	{% csrf_token %}
